--- a/src/css/base.css
+++ b/src/css/base.css
@@ -2,7 +2,7 @@ html {
   scroll-behavior: smooth;
 }
 .background {
-  background-image: url("/images/componentsBG.png");
+  background-image: url("/images/bgMain.png");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -25,7 +25,6 @@ body {
   justify-content: center;
   align-items: center;
   padding: clamp(16px, 3vh, 48px) 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.103);
 }
 
 .text-center {
