--- a/src/css/components.css
+++ b/src/css/components.css
@@ -25,6 +25,10 @@
 }
 
 .caption-bg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   backdrop-filter: blur(6px);
   background: linear-gradient(180deg, #25324296 0%, #161c2aaa 100%);
   padding: 10px;
@@ -69,7 +73,7 @@
 
 .main-plan-img {
   width: 100%;
-  height: 60svh;
+  height: min(60svh, 900px);
   object-fit: cover;
   display: block;
   opacity: 1;
@@ -179,11 +183,12 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 1;
   opacity: 0;
   transition: opacity 0.25s ease, background 0.25s ease, border-color 0.25s ease;
   z-index: 3;
+
 }
 
 .main-arrow.prev {
@@ -200,7 +205,6 @@
 
 .main-arrow:hover {
   background: rgba(0, 0, 0, 0.65);
-  border-color: var(--accent-hover);
 }
 
 /* =========================
@@ -238,9 +242,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
 .zoom-image {
+
   min-height: 70svh;
   max-width: auto;
   max-height: auto;
@@ -248,6 +254,7 @@
   display: block;
   user-select: none;
   transition: transform 0.2s ease-out;
+
 }
 
 .zoom-close {
@@ -294,23 +301,22 @@
   backdrop-filter: blur(10px);
 }
 
-.zoom-arrow:hover {
-  background: rgba(0, 2, 18, 0.389);
+.zoom-arrow.prev {
+  left: -5px;
+  border-radius: 0 8px 8px 0;
 }
+
+.zoom-arrow.next {
+  right: -5px;
+  border-radius: 8px 0 0 8px;
+}
+
 
 .zoom-arrow:active {
   transform: translateY(-50%) scale(0.95);
 }
 
-.zoom-arrow.prev {
-  left: 0;
-  border-radius: 0 8px 8px 0;
-}
 
-.zoom-arrow.next {
-  right: 0;
-  border-radius: 8px 0 0 8px;
-}
 
 .zoom-btn {
   cursor: pointer;
@@ -382,7 +388,7 @@
   border-color: rgba(255, 255, 255, 0.3);
 }
 
- 
+
 
 .swiper {
   overflow: hidden;
