--- a/src/css/components.css
+++ b/src/css/components.css
@@ -9,6 +9,7 @@
   gap: 10px;
   padding: var(--desktop-padding);
   margin: 0 auto;
+  transition: none !important;
 }
 
 .component-image-wrapper {
@@ -242,11 +243,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .zoom-image {
-
+  padding: 20px;
   min-height: 70svh;
   max-width: auto;
   max-height: auto;
@@ -299,8 +299,10 @@
   transition: all 0.2s;
   z-index: 10001;
   backdrop-filter: blur(10px);
+ 
 }
 
+ 
 .zoom-arrow.prev {
   left: -5px;
   border-radius: 0 8px 8px 0;
@@ -313,7 +315,7 @@
 
 
 .zoom-arrow:active {
-  transform: translateY(-50%) scale(0.95);
+  transform:translateX(-1%) translateY(-50%) scale(0.95);
 }
 
 
